--- a/proyecto/proyecto/proyecto/package.json
+++ b/proyecto/proyecto/proyecto/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.1",
+    "bootstrap": "^5.3.6",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
